@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-139: Change PageRankBenchmark to be accessible via bin/giraph. 
+  (jghoman)
+  
   GIRAPH-143: Add support for giraph to have a conf file. (jghoman)
 
   GIRAPH-142: _hadoopBsp should be prefixable via configuration. (jghoman)
